--- a/public/estoque.html
+++ b/public/estoque.html
@@ -17,7 +17,7 @@
       <input type="number" id="precomax" name="precomax" required>
 
       <button type="submit">Verificar</button>
-      <a href="index.html">Página Inicial</a>
+      <a id="lk" href="index.html">Página Inicial</a>
     </form>
     <div id="resultado"></div>
   </div>
